welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: Boolean does not take parameters
	while (vuBiscuit()==false) {
                        ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
	while (vuBiscuit()==false) {
        ^